@@ -136,8 +136,8 @@ HANDLE GetCurrentThreadHandle(void)
 /* simulate flock by locking a range on the file */
 
 
-#define LK_ERR(f,i) ((f) ? (i = 0) : (errno = GetLastError()))
-#define LK_LEN      0xffff0000
+#define LK_ERR(f,i) ((f) ? (i = 0) : (errno = GetLastError() == ERROR_LOCK_VIOLATION ? EWOULDBLOCK : EACCES))
+#define LK_LEN      ULONG_MAX
 
 static VALUE
 flock_winnt(VALUE self, int argc, VALUE* argv)
@@ -163,19 +163,9 @@ flock_winnt(VALUE self, int argc, VALUE* argv)
 	LK_ERR(LockFileEx(fh,
 			  LOCKFILE_EXCLUSIVE_LOCK|LOCKFILE_FAIL_IMMEDIATELY,
 			  0, LK_LEN, 0, &o), i);
-	if (errno == EDOM)
-	    errno = EWOULDBLOCK;
 	break;
       case LOCK_UN:		/* unlock lock */
-	if (UnlockFileEx(fh, 0, LK_LEN, 0, &o)) {
-	    i = 0;
-	    if (errno == EDOM)
-		errno = EWOULDBLOCK;
-	}
-	else {
-	    /* GetLastError() must returns `ERROR_NOT_LOCKED' */
-	    errno = EWOULDBLOCK;
-	}
+	LK_ERR(UnlockFileEx(fh, 0, LK_LEN, 0, &o), i);
 	break;
       default:            /* unknown */
 	errno = EINVAL;
@@ -193,20 +183,15 @@ flock_win95(VALUE self, int argc, VALUE* argv)
 
     switch(oper) {
       case LOCK_EX:
-	while(i == -1) {
+	do {
 	    LK_ERR(LockFile(fh, 0, 0, LK_LEN, 0), i);
-	    if (errno != EDOM && i == -1) break;
-	}
+	} while (i && errno == EWOULDBLOCK);
 	break;
-      case LOCK_EX | LOCK_NB:
+      case LOCK_EX|LOCK_NB:
 	LK_ERR(LockFile(fh, 0, 0, LK_LEN, 0), i);
-	if (errno == EDOM)
-	    errno = EWOULDBLOCK;
 	break;
       case LOCK_UN:
 	LK_ERR(UnlockFile(fh, 0, 0, LK_LEN, 0), i);
-	if (errno == EDOM)
-	    errno = EWOULDBLOCK;
 	break;
       default:
 	errno = EINVAL;
@@ -216,7 +201,6 @@ flock_win95(VALUE self, int argc, VALUE* argv)
 }
 
 #undef LK_ERR
-#undef LK_LEN
 
 int
 flock(int fd, int oper)
@@ -2892,6 +2876,7 @@ void win32_leave_syscall(void)
 struct asynchronous_arg_t {
     /* output field */
     void* stackaddr;
+    int errnum;
 
     /* input field */
     VALUE (*func)(VALUE self, int argc, VALUE* argv);
@@ -2903,13 +2888,17 @@ struct asynchronous_arg_t {
 static DWORD WINAPI
 call_asynchronous(PVOID argp)
 {
+    DWORD ret;
     struct asynchronous_arg_t *arg = argp;
     arg->stackaddr = &argp;
-    return (DWORD)arg->func(arg->self, arg->argc, arg->argv);
+    ret = (DWORD)arg->func(arg->self, arg->argc, arg->argv);
+    arg->errnum = errno;
+    return ret;
 }
 
-VALUE win32_asynchronize(asynchronous_func_t func,
-			 VALUE self, int argc, VALUE* argv, VALUE intrval)
+VALUE
+win32_asynchronize(asynchronous_func_t func,
+		   VALUE self, int argc, VALUE* argv, VALUE intrval)
 {
     DWORD val;
     BOOL interrupted = FALSE;
@@ -2919,6 +2908,7 @@ VALUE win32_asynchronize(asynchronous_func_t func,
 	struct asynchronous_arg_t arg;
 
 	arg.stackaddr = NULL;
+	arg.errnum = 0;
 	arg.func = func;
 	arg.self = self;
 	arg.argc = argc;
@@ -2953,6 +2943,10 @@ VALUE win32_asynchronize(asynchronous_func_t func,
 		    Debug(fprintf(stderr, "couldn't release stack:%p:%d\n",
 				  m.AllocationBase, GetLastError()));
 		}
+		errno = EINTR;
+	    }
+	    else {
+		errno = arg.errnum;
 	    }
 	}
     });
@@ -2962,7 +2956,6 @@ VALUE win32_asynchronize(asynchronous_func_t func,
     }
 
     if (interrupted) {
-	errno = EINTR;
 	CHECK_INTS;
     }
 
@@ -3009,6 +3002,7 @@ win32_fclose(FILE *fp)
 
     if (fflush(fp)) return -1;
     if (!is_socket(sock)) {
+	UnlockFile((HANDLE)sock, 0, 0, LK_LEN, 0);
 	return fclose(fp);
     }
     _set_osfhnd(fd, (SOCKET)INVALID_HANDLE_VALUE);
@@ -3026,6 +3020,7 @@ win32_close(int fd)
     SOCKET sock = TO_SOCKET(fd);
 
     if (!is_socket(sock)) {
+	UnlockFile((HANDLE)sock, 0, 0, LK_LEN, 0);
 	return _close(fd);
     }
     if (closesocket(sock) == SOCKET_ERROR) {
